# Simple-Task-Manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: parse_cli.h  task.h  task_manager.h
include/commands/: add_task_command.h  check_task_command.h  clear_completed_command.h  copy_task_command.h  delete_task_command.h  display_tasks_command.h  edit_desc_command.h  edit_name_command.h  i_command.h  load_from_file_command.h  mark_as_completed_command.h  mark_as_uncompleted_command.h  print_file_command.h  reload_command.h  save_command.h  save_to_file_command.h  see_task_command.h
src/: main.cpp  parse_cli.cpp  task.cpp  task_manager.cpp
